--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
     <script src="index.js" defer></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 p-8">
-    <div class="max-w-4xl mx-auto bg-white p-6 rounded-lg shadow-lg">
-        <h1 class="text-2xl font-bold mb-6">Product Variations Management</h1>
+<body class="bg-gradient-to-br from-blue-50 to-blue-100 min-h-screen flex items-center justify-center">
+    <div class="max-w-5xl w-full bg-white p-8 rounded-lg shadow-2xl">
+        <h1 class="text-3xl font-extrabold text-gray-800 mb-8 text-center">Product Variations Management</h1>
 
         <!-- Product Variation Form -->
-        <div class="mb-8">
-            <h2 class="text-xl font-semibold mb-4">Add Product Variation</h2>
-            <form id="productForm" class="space-y-4">
+        <div class="mb-10">
+            <h2 class="text-2xl font-bold text-gray-700 mb-6">Add Product Variation</h2>
+            <form id="productForm" class="space-y-6">
                 <div>
-                    <label class="block font-medium">Product Name</label>
+                    <label class="block text-gray-600 font-medium mb-1">Product Name</label>
                     <input id="productName" type="text" required
-                        class="border border-gray-300 p-2 rounded w-full" placeholder="Enter product name" />
+                        class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200 focus:outline-none" 
+                        placeholder="Enter product name" />
                 </div>
 
                 <div>
-                    <label class="block font-medium">Size</label>
+                    <label class="block text-gray-600 font-medium mb-1">Size</label>
                     <select id="productSize" required
-                        class="border border-gray-300 p-2 rounded w-full">
+                        class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200 focus:outline-none">
                         <option value="" disabled selected>Select size</option>
                         <option value="S">S</option>
                         <option value="M">M</option>
@@ -35,33 +36,36 @@
                 </div>
 
                 <div>
-                    <label class="block font-medium">Color</label>
+                    <label class="block text-gray-600 font-medium mb-1">Color</label>
                     <input id="productColor" type="text" required
-                        class="border border-gray-300 p-2 rounded w-full" placeholder="Enter color" />
+                        class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200 focus:outline-none" 
+                        placeholder="Enter color" />
                 </div>
 
                 <div>
-                    <label class="block font-medium">Model</label>
+                    <label class="block text-gray-600 font-medium mb-1">Model</label>
                     <input id="productModel" type="text" required
-                        class="border border-gray-300 p-2 rounded w-full" placeholder="Enter model" />
+                        class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200 focus:outline-none" 
+                        placeholder="Enter model" />
                 </div>
 
-                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Add Product</button>
+                <button type="submit" 
+                    class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-all">Add Product</button>
             </form>
         </div>
 
         <!-- Search Bar -->
         <div class="mb-8">
             <input id="searchInput" type="text" placeholder="Search combinations..." 
-                class="border border-gray-300 p-2 rounded w-full">
+                class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200 focus:outline-none" />
         </div>
 
         <!-- Generated Combinations Table -->
         <div>
-            <h2 class="text-xl font-semibold mb-4">Generated Combinations</h2>
-            <table class="table-auto w-full border-collapse border border-gray-300">
+            <h2 class="text-2xl font-bold text-gray-700 mb-6">Generated Combinations</h2>
+            <table class="table-auto w-full border-collapse border border-gray-300 shadow-lg rounded-lg">
                 <thead>
-                    <tr class="bg-gray-200 text-left">
+                    <tr class="bg-blue-100 text-left">
                         <th class="border border-gray-300 px-4 py-2">Combination</th>
                         <th class="border border-gray-300 px-4 py-2">Stock</th>
                         <th class="border border-gray-300 px-4 py-2">Price</th>
@@ -69,7 +73,7 @@
                         <th class="border border-gray-300 px-4 py-2">Actions</th>
                     </tr>
                 </thead>
-                <tbody id="combinationsTable" class="text-gray-700"></tbody>
+                <tbody id="combinationsTable" class="text-gray-700 text-center"></tbody>
             </table>
         </div>
     </div>
