--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                         <th class="border border-gray-300 px-4 py-2">Actions</th>
                     </tr>
                 </thead>
-                <tbody id="combinationsTable" class="text-gray-700 text-center"></tbody>
+                <tbody id="combinationsTable" class="text-gray-700 text-center">
+                    <!-- Generated combinations will appear here -->
+                </tbody>
             </table>
         </div>
     </div>
