--- a/index.html
+++ b/index.html
@@ -8,59 +8,32 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-blue-100 min-h-screen flex items-center justify-center">
-    <div class="max-w-5xl w-full bg-white p-8 rounded-lg shadow-2xl">
-        <h1 class="text-3xl font-extrabold text-gray-800 mb-8 text-center">Product Variations Management</h1>
+    <div class="max-w-5xl w-full bg-white p-10 rounded-lg shadow-2xl">
+        <h1 class="text-4xl font-extrabold text-gray-800 mb-10 text-center">Product Variations Management</h1>
 
-        <!-- Product Variation Form -->
         <div class="mb-10">
-            <h2 class="text-2xl font-bold text-gray-700 mb-6">Add Product Variation</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-6">Choose Your Product</h2>
             <form id="productForm" class="space-y-6">
                 <div>
-                    <label class="block text-gray-600 font-medium mb-1">Product Name</label>
-                    <input id="productName" type="text" required
-                        class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200 focus:outline-none" 
-                        placeholder="Enter product name" />
-                </div>
-
-                <div>
-                    <label class="block text-gray-600 font-medium mb-1">Size</label>
-                    <select id="productSize" required
-                        class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200 focus:outline-none">
-                        <option value="" disabled selected>Select size</option>
-                        <option value="S">S</option>
-                        <option value="M">M</option>
-                        <option value="L">L</option>
-                        <option value="XL">XL</option>
-                        <option value="XXL">XXL</option>
+                    <label class="block text-gray-600 font-medium mb-2">Product Category</label>
+                    <select id="productCategory" required class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200">
+                        <option value="" disabled selected>Select category</option>
+                        <option value="food">Food</option>
+                        <option value="clothes">Clothes</option>
+                        <option value="medicine">Medicine</option>
+                        <option value="toys">Toys</option>
+                        <option value="others">Others</option>
                     </select>
                 </div>
-
-                <div>
-                    <label class="block text-gray-600 font-medium mb-1">Color</label>
-                    <input id="productColor" type="text" required
-                        class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200 focus:outline-none" 
-                        placeholder="Enter color" />
-                </div>
-
-                <div>
-                    <label class="block text-gray-600 font-medium mb-1">Model</label>
-                    <input id="productModel" type="text" required
-                        class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200 focus:outline-none" 
-                        placeholder="Enter model" />
-                </div>
-
-                <button type="submit" 
-                    class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-all">Add Product</button>
+                <div id="dynamicFields"></div>
+                <button type="button" id="generateButton" class="bg-green-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-green-700 transition">Generate</button>
             </form>
         </div>
 
-        <!-- Search Bar -->
         <div class="mb-8">
-            <input id="searchInput" type="text" placeholder="Search combinations..." 
-                class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200 focus:outline-none" />
+            <input id="searchInput" type="text" placeholder="Search combinations..." class="border border-gray-300 p-3 rounded-lg w-full shadow-sm focus:ring focus:ring-blue-200">
         </div>
 
-        <!-- Generated Combinations Table -->
         <div>
             <h2 class="text-2xl font-bold text-gray-700 mb-6">Generated Combinations</h2>
             <table class="table-auto w-full border-collapse border border-gray-300 shadow-lg rounded-lg">
