--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
                         <option value="food">Food</option>
                         <option value="clothes">Clothes</option>
                         <option value="medicine">Medicine</option>
-                        <option value="toys">Toys</option>
-                        <option value="others">Others</option>
                     </select>
                 </div>
                 <div id="dynamicFields"></div>
@@ -40,10 +38,13 @@
                 <thead>
                     <tr class="bg-blue-100 text-left">
                         <th class="border border-gray-300 px-4 py-2">Combination</th>
+                        <th class="border border-gray-300 px-4 py-2">Size</th>
+                        <th class="border border-gray-300 px-4 py-2">Color</th>
                         <th class="border border-gray-300 px-4 py-2">Stock</th>
                         <th class="border border-gray-300 px-4 py-2">Price</th>
                         <th class="border border-gray-300 px-4 py-2">Discounted Price</th>
                         <th class="border border-gray-300 px-4 py-2">Actions</th>
+                       
                     </tr>
                 </thead>
                 <tbody id="combinationsTable" class="text-gray-700 text-center"></tbody>
